books/projects/rac/tests/yaml_test/control_flow/if-else-return-not-complete-2.ref.stderr
if-else-return-not-complete-2.cpp:8 (4-10): syntax error, unexpected RETURN
 8 |     return 1;
   |     ^^^^^^
